--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -354,7 +354,7 @@
    <widget class="QLabel" name="coords">
     <property name="geometry">
      <rect>
-      <x>530</x>
+      <x>700</x>
       <y>550</y>
       <width>151</width>
       <height>61</height>
@@ -395,6 +395,26 @@
     </property>
     <property name="text">
      <string>Справка</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_3">
+    <property name="geometry">
+     <rect>
+      <x>500</x>
+      <y>550</y>
+      <width>181</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>Открыть файл с данными</string>
     </property>
    </widget>
   </widget>
